avoiding blue highlight when touch on mobile screens

--- a/src/client/app.scss
+++ b/src/client/app.scss
@@ -20,6 +20,14 @@ $box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 * {
   letter-spacing: 1px;
 }
+
+*:focus {
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+}
+
 body {
   margin: 0 !important;
   padding: 0 !important;
